# Python-Course

./: README.md  pyproject.toml
Include/Basics/: BetterCalculator.py  Comments.py  Comparisons.py  Dictionaries.py  Exceptions.py  ExponentFunction.py  ForLoop.py  Fuctions.py  GuessingGame.py  HelloWorld.py  IfStatement.py  Input.py  ListFunctions.py  Lists.py  NestedLoop.py  ReadingFiles.py  ReturnStatement.py  Translator.py  TryExcepted.py  Tuples.py  WhileLoop.py  WritingFiles.py  payment_calculator.py  sliced.py  useful_tools.py
Include/OOP/: Student.py  app.py
Include/doc/: appendingfile.txt  employees.txt  index.html
Include/python_mysql/: connect_to_mysql.py  create_table.py  delete_clause.py  get_insert_id.py  insert_clause.py  insert_many.py  limit_clause.py  mysql_performance.py  mysql_performance_basic.py  orderby_clause.py  select_clause.py  show_tables.py  sql_injection.py  update_clause.py  where_clause.py
Include/python_mysql_official/: connect_to_mysql_official.py  create_database_tables.py  insert_data_offical.py  select_buffered_offical.py  select_offical.py
Include/security/pycrytodome/: readme.md  rsaCompleteDemo.py  rsaSimpleDemo.py
Include/security/rsa/: rsaTest.py
Include/smtp/: SmtpTest.py  SmtpTest2.py  SmtpTest3.py  textfile.txt
Scripts/: activate  activate.bat
