[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["landy.liu"]
readme = "README.md"
packages = [{include="Include"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pycryptodome = "^3.18.0"
rsa = "^4.9"
openpyxl = "^3.1.2"
reportlab = "^4.0.4"
mysql-connector-python = "^8.1.0"
mysqlclient = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
